z-index fix

--- a/index.css
+++ b/index.css
@@ -117,7 +117,7 @@ RIGHT MAIN CONTAINS
 
     width:40%;
     margin:10px;
-    z-index:-2;
+    z-index:0;
     
     height:90vh;
 }
@@ -143,12 +143,6 @@ RIGHT MAIN CONTAINS
     margin:0;
     padding:15px;
 }
-.track_updater{
-    /*height:80vh;*/
-}
-#songs_list{
-    /*max-height: calc(100% - 40px);*/
-}
 .recent_tracks li{
     z-index:2;
     background:rgb(252, 248, 246);
@@ -157,13 +151,13 @@ RIGHT MAIN CONTAINS
     padding:4px;
     font-size:10px;
 }
-
 .info {
     height:35px;
     background-color: rgb(0, 0, 0);
     text-align: right;
 }
 .info i {
+    z-index: 3;
     padding:5px;
     margin-top:5px;
     margin-right:5px;
